tests/paczka1/small_fuzzy/89075951.err
Error in line 1: 3TCf A364 23,7
Error in line 5: cGFn A37 15,5
